--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <ng-container>
     <mat-toolbar class="title">
         <a>
-            <span>Academia Sopranos <img src="../../../../assets/apple-logo.png"></span>
+            <span>Academia Sopranos <img src="./../../../../assets/apple-logo.png"></span>
         </a>
         <a class="logout" matTooltip="Cerrar sesion" (click)="logout()">
             <mat-icon>logout</mat-icon>
