--- a/src/app/alumno/components/abm-alumno/agregar-alumno/agregar-alumno.component.html
+++ b/src/app/alumno/components/abm-alumno/agregar-alumno/agregar-alumno.component.html
@@ -17,7 +17,7 @@
                             Completar</div>
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="3" [rowspan]="6">
-                    <img src="../../../../../assets/alumno.jpg">
+                    <img src="./assets/alumno.jpg">
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                     <mat-form-field class="ancho">
