--- a/src/app/curso/components/abm-curso/agregar-curso/agregar-curso.component.html
+++ b/src/app/curso/components/abm-curso/agregar-curso/agregar-curso.component.html
@@ -17,7 +17,7 @@
                             Completar</div>
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="3" [rowspan]="6">
-                    <img src="../../../../../assets/curso.jpg">
+                    <img src="./assets/curso.jpg">
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                     <mat-form-field class="ancho">
