--- a/src/app/inscripciones/components/abm-inscripcion/agregar-inscripcion/agregar-inscripcion.component.html
+++ b/src/app/inscripciones/components/abm-inscripcion/agregar-inscripcion/agregar-inscripcion.component.html
@@ -15,7 +15,7 @@
                     </mat-form-field>
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="3" [rowspan]="6">
-                    <img src="../../../../../assets/inscripcion.jpg">
+                    <img src="./assets/inscripcion.jpg">
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                     <mat-form-field class="ancho">
